--- a/Dijkstra's algorithm/Dijkstra's algorithm/DijkstrasAlgorithm.csproj
+++ b/Dijkstra's algorithm/Dijkstra's algorithm/DijkstrasAlgorithm.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Dijkstra_s_algorithm</RootNamespace>
+    <RootNamespace>DijkstrasAlgorithm</RootNamespace>
+    <AssemblyName>DijkstrasAlgorithm</AssemblyName>
   </PropertyGroup>
 
 </Project>
