--- a/Dijkstra's algorithm/Dijkstra's algorithm/DijkstrasAlgorithm.csproj
+++ b/Dijkstra's algorithm/Dijkstra's algorithm/DijkstrasAlgorithm.csproj
@@ -1,9 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>DijkstrasAlgorithm</RootNamespace>
     <AssemblyName>DijkstrasAlgorithm</AssemblyName>
-  </PropertyGroup>
-
+    <StyleCopTreatErrorsAsWarnings>True</StyleCopTreatErrorsAsWarnings>
+  </PropertyGroup>  
 </Project>
